lib/parse/src/snapshots/parse__parser__tests__import__fail_to_parse_private_external_module_directory.snap
---
source: lib/parse/src/parser.rs
expression: "external_module_path(input(source,\n                \"\")).map_err(|error|\n            ParseError::new(source, \"\", error)).unwrap_err()"
---
ParseError {
    message: "failed to parse public module path component",
    position: Position(
        PositionInner {
            path: "",
            line_number: 1,
            column_number: 5,
            line: "Foo'bar'Baz",
        },
    ),
}
